# shesh-besh

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: BuildTest.yml
include/backgammon/: dice.hpp  irules_engine.hpp  step.hpp  types.hpp  vanilla_rules_engine.hpp
include/backgammon/engine/: board.hpp  dice.hpp  enums.hpp  irules_engine.hpp  step.hpp  types.hpp  vanilla_rules_engine.hpp
include/backgammon/game/: game.hpp  iplayer.hpp  match.hpp  match_maker.hpp  match_session.hpp
include/backgammon/players/: rbot.hpp
src/: board.cpp  dice.cpp  vanilla_rules_engine.cpp
src/engine/: board.cpp  dice.cpp  vanilla_rules_engine.cpp
src/game/: game.cpp  match.cpp  match_maker.cpp  match_session.cpp
src/players/: rbot.cpp
tests/: CMakeLists.txt
tests/engine/: vanilla_engine_tests.cpp
tests/game/: game_rbot_tests.cpp  rbot_parallel_tests.cpp
